Fondation du site presque terminé.

--- a/index.html
+++ b/index.html
@@ -14,32 +14,26 @@
                 BacFR24 <br>
                 Carnet de Benstitou Sofiane pour le bac de français 2024
             </h1>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="">Programme BacFR2024</a>
-                    </li>
-                    <li>
-                        <a href="">Qui suis-je ?</a>
-                    </li>
-                    <li>
-                        <a href="">Me contacter</a>
-                    </li>
-                </ul>
-            </nav>
         </header>
-        <article>
+        <main>
+            <nav>
+                <a href="BacFR24/introduction.html">Programme BacFR24</a>
+                  
+                <a href="pages/presentation.html">Qui suis-je ?</a>
+            
+                <a href="pages/contact.html">Me contacter</a>
+            </nav>
             <h2>
-                Bienvenue sur le Site Web BacFR24 développé seul avec 💙 par Benstitou Sofiane (code sources sur GitHub)
+                Bienvenue sur le Site Web BacFR24 <br> Développé seul avec 💙 par Benstitou Sofiane (code sources dispo sur GitHub)
             </h2>
             <p>
                 Voici ci-dessous le programme du Bac de français 2023-2024 (BO) :
             </p>
             <a href="https://www.education.gouv.fr/bo/22/Hebdo26/MENE2216064N.htm" target="_blank">Programme national d'œuvres pour l'enseignement de français pour l'année scolaire 2023-2024</a>
-        </article>
+        </main>
         <footer>
             <p>
-                Pas de droit d'auteur, <strong>pour la structure et le code du Site Web</strong>, libre d'utilisation (même commerciale)
+                Pas de droit d'auteur, <strong>pour la structure, images stockés localement et le code du Site Web</strong>, libre d'utilisation (même commerciale)
             </p>
         </footer>
 </body>
