ajout du lien du code source

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             </nav>
             <h2>
                 Bienvenue sur le Site Web BacFR24 <br> Développé seul avec 💙 par Benstitou Sofiane (code sources dispo sur GitHub)
-            </h2>
+            </h2> <br>
+            <a href="https://github.com/benstitousofiane/bacfr24" target="_blank">Code source du Site Web</a>
             <p>
                 Voici ci-dessous le programme du Bac de français 2023-2024 (BO) :
             </p>
