--- a/pages/contact.html
+++ b/pages/contact.html
@@ -16,7 +16,7 @@
         <main>
             <div class="contact">
                 <h1>Une seule façon de me contacter pour le moment, via Discord :</h1>
-                <a href="https://discord.com/app" class="discord">ID : carré#8005</a>
+                <a href="https://discord.com/app" class="discord">ID : benstitousofiane</a>
             </div>
         </main>
         <footer>
